*** Facebook Business Extension For Magento Changelog ***

2019-05-06 version 2.6.3
- Security patch

2018-12-05 version 2.6.2
- Fix configurable product showing in stock when all simple products under it
  are out of stock. (#6)
- Add advanced option to not sync out of stock products to FB. (#70)
- Fix PHP warning issue for products with multiple genders. (#99)
- Messenger Chat Customization
- Minor UI Adjustments

2018-08-31 version 2.6.1
- Fix malformed include statement when compilation mode is enabled
- Fix warning when variable is undefined
- Remove unnecessary statement that was causing warnings/errors in debug mode.

2018-08-10 version 2.6.0
- Introduce Debug Mode
- Fix AddToCart product matching error.
- A Notice will now appear in the config page when a new version is available.

2018-06-01 version 2.5.0
- UI Redesign.
- UI reset when settings are deleted via popup.
- Added Messenger Chat support (Beta).

2018-04-20 version 2.4.2
- FB Shop creation is enabled for all setups by default.
- Remove un-needed debugging code.

2018-03-27 version 2.4.1
- De-Dup Multiple IDs in Feed File.
- Replace substr/strlen with mb_substr/mb_strlen. Fixes blank screen issue.
  * Thanks @mpalasis and @punkstar
- Fix PHP warning in #34
  * Thanks @tiltedlistener

2018-03-12 version 2.4.0
- Add automatic FB Shop creation as an advanced option available during setup.

2017-12-14 version 2.3.6
- Blank Screen Fix : Detect case where currency conversion rate is undefined.
- Include ACL Permissions (Thanks @WaPoNe!)

2017-12-07 version 2.3.5
- Fix memory leak.
- New method of loading store specific products.

2017-11-03 version 2.3.4
- Use 'Gender' attribute in feed, if it exists. Added by @tahoff
- Link to new ads creation interface. Added by @mengyingdu

2017-09-22 version 2.3.2
- Bundled Products price is now exported with Tax, if applicable.

2017-09-13 version 2.3.1
- Fix a crash that occurs if a two versions of this plugin are installed at