@@ -2,8 +2,6 @@
  <script>
   fbq('trackCustom', 'ViewCategory', {
     source: 'magento',
-    version: "<?php echo $this->getMagentoVersion() ?>",
-    pluginVersion: "<?php echo $this->getPluginVersion() ?>"
  <?php if ($this->getCategory()) { ?>
   , content_category: "<?php echo $this->getCategory() ?>"
   <?php } ?>
