@@ -2,8 +2,6 @@
  <script>
   fbq('track', 'ViewContent', {
     source: 'magento',
-    version: "<?php echo $this->getMagentoVersion() ?>",
-    pluginVersion: "<?php echo $this->getPluginVersion() ?>",
     content_type: "<?php echo $this->getContentType() ?>",
     content_ids: [<?php echo $this->getContentIDs() ?>]
     <?php if ($this->getContentName()) { ?>
